overlays/uksouth-preprod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Xss-Protection: 1; mode=block";
  name: api.preprod0.uksouth.bink.sh
  namespace: default
spec:
  rules:
  - host: api.preprod0.uksouth.bink.sh
    http:
      paths:
      - path: /bpl/admin
        pathType: Prefix
        backend:
          service:
            name: event-horizon
            port:
              number: 80
      - path: /txm/config/keys
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/import/bink-loyalty/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/import/bink-payment/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/matching/force_match
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/mids/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /txm/status/
        pathType: Prefix
        backend:
          service:
            name: harmonia-api
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /payment_cards
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /schemes
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /ubiquity
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: hermes-api
            port:
              number: 80
      - path: /content
        pathType: Prefix
        backend:
          service:
            name: iris
            port:
              number: 80
      - path: /password
        pathType: Prefix
        backend:
          service:
            name: lethe
            port:
              number: 80
      - path: /payment_service
        pathType: Prefix
        backend:
          service:
            name: metis-api
            port:
              number: 80
      - path: /join/merchant/
        pathType: Prefix
        backend:
          service:
            name: midas-api
            port:
              number: 80
      - path: /bpl/loyalty
        pathType: Prefix
        backend:
          service:
            name: polaris-api
            port:
              number: 80
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: simplenginx
            port:
              number: 80
      - path: /auth_transactions
        pathType: Prefix
        backend:
          service:
            name: zephyrus
            port:
              number: 80
  tls:
  - hosts:
    - api.preprod0.uksouth.bink.sh
    secretName: api.preprod0.uksouth.bink.sh
